2007-11-16  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib_test.dll.sources : added S.R.E/SignatureHelperTest.cs.

2007-11-13  Zoltan Varga  <vargaz@gmail.com>

	* corlib.dll.sources: Add System/GCCollectionMode.cs and System/GCLatencyMode.cs.

2007-09-14  Jb Evain  <jbevain@novell.com>

	* Makefile: force the use of the 2.0 mscorlib to compile
	the 2.1 mscorlib.dll.

2007-08-23  Robert Jordan  <robertj@gmx.net>

	* corlib.dll.sources: Added MemberInfoSerializationHolder.cs.

2007-08-22  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib_test.dll.sources : added ChannelServicesTest.cs.

2007-08-15  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib.dll.sources : added CustomErrorsModes.cs.

2007-08-13  Gert Driesen  <drieseng@users.sourceforge.net>

	* corlib_test.dll.sources: Added System/ArgumentExceptionTest.cs.

2007-08-10  Zoltan Varga  <vargaz@gmail.com>

	* corlib.dll.sources: Added System.Reflection.Emit/DynamicILInfo.cs.

2007-08-08  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib.dll.sources : removed ComObjectInUseException.cs and
	  ExposeAsClassToComAttribute.cs.

2007-07-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* corlib_test.dll.sources: added RuntimeMethodHandleTest.cs.

2007-07-10  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib_test.dll.sources : added StringInfoTest.cs.

2007-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib.dll.sources : added couple of new 2.0 calendars.
	* corlib_test.dll.sources : added EastAsianLunisolarCalendarTest.cs.

2007-05-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* corlib_test.dll.sources : added DateTimeFormatInfoTest.cs.

2007-05-25  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib_test.dll.sources : added ResourceWriterTest.cs.

2007-05-25  Atsushi Enomoto  <atsushi@ximian.com>

	* corlib.dll.sources : added MissingSatelliteAssemblyException.cs
	  and IdnMapping.cs. Removed obsolete 2.0 NotCancelableException.cs.
	* corlib_test.dll.sources : added IdnMappingTest.cs.
