@@ -1,3 +1,8 @@
+2007-11-21  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* corlib.dll.sources: added System.Deployment.Internal and
+	  System.Runtime sources.
+
 2007-11-16  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* corlib_test.dll.sources : added S.R.E/SignatureHelperTest.cs.
